--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 html {
-	height: auto;
+	min-height: 100%;
+	position: relative;
 }
 
 body {
@@ -12,6 +13,7 @@ body {
 	font-family: "Avant Garde",Avantgarde,"Century Gothic",CenturyGothic,AppleGothic,sans-serif;
 	font-size: 18px;
 	line-height: 150%;
+	margin-bottom: calc(100px + 2%);
 }
 
 h1 {
@@ -197,7 +199,6 @@ div.portfolioItems:nth-child(even){
 	margin: 0 0 10px;
 	min-width: 100%;
 	padding: 0;
-	width: 100%;
 }
 
 .contactForm input[type="text"],
@@ -216,15 +217,17 @@ div.portfolioItems:nth-child(even){
 	color: #ccc;
 	font-size: 18px;
 	background-color: rgb(50, 130, 50);
-	width: 96%;
+	min-width: 30%;
 	height: auto;
-	margin-right: 3%;
+	margin-right: 35%;
+	margin-left: 35%;
 	border: 1px solid rgb(50, 130, 50);
 	padding: 10px;
 }
 
 .contactForm textarea {
 	resize: none;
+	height: 300px;
 }
 
 .connect {
@@ -260,21 +263,48 @@ a:hover.logo {
 
 footer {
 	width: 100%;
-	height: 59px;
+	height: 80px;
 	color: #999;
 	text-transform: capitalize;
 	text-align: center;
  	background-color: rgba(0, 0, 0, 0.8);
- 	padding-bottom: 2%;
- 	padding-top: 1%;
+ 	padding-top: 20px;
  	border-top: 3px solid #999;
+ 	position: absolute;
+ 	bottom: 0;
+
 }
 
-footer.portfolio {
-	position: relative;
+/*Media querries begin*/
+
+@media handheld, screen and (max-width: 980px) {
+	
+	.aboutImage {
+		min-width: 100%;
+		margin: 0 0 20px 0;
+	}
+
+	div.portfolioItems:nth-child(n) {
+		margin: 0;
+		max-width: 100%;
+	}
+
+	.connect {
+		width: 29%;
+		margin-left: 2%;
+	}
+
+	.container {
+		width: 69%;
+		margin-right: 2%;
+		flex-wrap: wrap;
+	}
 }
 
-footer.normal {
-	position: absolute;
-	bottom: 0;
+@media handheld, screen and (max-width: 980px) {
+	
+}
+
+@media handheld, screen and (max-width: 980px) {
+	
 }
