--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,8 +68,12 @@ h2 {
 	padding: 8px 12px;
 }
 
+ul.menu {
+	font-size: 16px;
+}
+
 ul.menu a:link {
-	color: #585858;
+	color: #999;
 	text-decoration: none;
 }
 
@@ -116,9 +120,8 @@ ul.menu li:hover a{
 }
 
 .container {
-	width: 69%;
+	width: 68%;
 	margin-right: 2%;
-	flex-wrap: wrap;
 }
 
 .containerInner {
@@ -231,7 +234,7 @@ div.portfolioItems:nth-child(even){
 }
 
 .connect {
-	width: 29%;
+	width: 28%;
 	margin-left: 2%;
 }
 
@@ -246,7 +249,7 @@ a.logo {
 
 a.logo img {
 	max-width: 90%;
-	height: auto;
+	height: 90%;
 	padding: 5%;
 }
 
@@ -265,6 +268,7 @@ footer {
 	width: 100%;
 	height: 80px;
 	color: #999;
+	font-size: 16px;
 	text-transform: capitalize;
 	text-align: center;
  	background-color: rgba(0, 0, 0, 0.8);
@@ -275,9 +279,11 @@ footer {
 
 }
 
-/*Media querries begin*/
+/*Media queries begin*/
 
-@media only handheld, screen and (max-width: 980px) {
+/*Media query for screen width between 769px to 980px*/
+
+@media only handheld, screen and (min-width: 769px) and (max-width: 980px) {
 	
 	.aboutImage {
 		min-width: 100%;
@@ -289,22 +295,96 @@ footer {
 		max-width: 100%;
 	}
 
+	.container {
+		width: 68%;
+		margin-right: 2%;
+	}
+
 	.connect {
-		width: 29%;
+		width: 38%;
 		margin-left: 2%;
+	}
+}
+
+/*Media query for screen width between 641px to 768px*/
+
+@media handheld, screen and (min-width: 641px) and (max-width: 768px) {
+	
+	.bar {
+		padding-left: 2%;
+		padding-right: 2%;
+		width: 96%;
+	}
+
+	.layout {
+		margin: calc(56px + 2%) 2% 2% 2%;	
+		flex-direction: column;
 	}
 
 	.container {
-		width: 69%;
-		margin-right: 2%;
-		flex-wrap: wrap;
+		width: 100%;
+		margin-right: 0;
+		margin-bottom: 1vw;
+	}
+
+	.aboutImage {
+		max-width: 50%;
+	}
+
+	.connect {
+		width: 100%;
+		margin-left: 0;
+		margin-top: 1vw;
+	}
+
+	a.logo {
+		max-width: 20%;
 	}
 }
 
-@media handheld, screen and (max-width: 980px) {
-	
-}
+/*Media query for 640px and below*/
 
-@media handheld, screen and (max-width: 980px) {
-	
+@media handheld, screen and (max-width: 640px) {
+
+	.bar {
+		flex-direction: column;
+		padding: 0;
+		width: 100%;
+		position: static;
+	}
+
+	ul.menu li {
+		width: calc(33vw - 36px);
+		text-align: center;
+	}
+
+	.layout {
+		margin: 2% 2% 2% 2%;
+		flex-direction: column;
+	}
+
+	.container {
+		width: 100%;
+		margin-right: 0;
+		margin-bottom: 1vw;
+	}
+
+	.aboutImage {
+		max-width: 50%;
+	}
+
+	div.portfolioItems:nth-child(n) {
+		margin: 0;
+		max-width: 100%;
+	}
+
+	.connect {
+		width: 100%;
+		margin-left: 0;
+		margin-top: 1vw;
+	}
+
+	a.logo {
+		max-width: 20%;
+	}
 }
